@@ -2,6 +2,7 @@ package com.chua.common.support.datasearch.video.spi.impl;
 
 import com.chua.common.support.datasearch.video.model.VideoInfoResult;
 import com.chua.common.support.datasearch.video.model.VideoSearch;
+import com.chua.common.support.datasearch.video.model.VideoSource;
 import com.chua.common.support.datasearch.video.spi.AbstractResourceProvider;
 import com.chua.common.support.datasearch.network.lang.code.ReturnPageResult;
 import com.chua.common.support.lang.code.PageResult;
@@ -9,62 +10,127 @@ import com.chua.common.support.spi.annotations.Spi;
 import com.chua.common.support.utils.StringUtils;
 
 import java.net.URI;
+import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.LinkedHashSet;
+import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
-* I看TV (ikantv) 影视搜索提供器
-* @author CH
-* @since 4.0.0
+ * I看TV (ikantv) 影视搜索提供器。
+ *
+ * <p>抓取 www.ikantv.com 搜索页并提取影视条目链接。
+ * 当前站点连接超时（已失效），命中 403/非影视特征时快速失败。</p>
+ *
+ * @author CH
+ * @since 4.0.0
  */
 @Spi("ikantv")
 public class IKanTvResourceProvider extends AbstractResourceProvider {
+
+    /** 搜索页地址前缀（拼接 UTF-8 编码后的关键词） */
+    private static final String SEARCH_URL = "https://www.ikantv.com/?s=";
+    /** 站点特征词：正常影视站页面包含该词 */
+    private static final String SITE_MARKER = "影视";
+    /** 标题链接匹配模式：群体(1)=链接，群体(2)=标题 */
+    private static final Pattern TITLE_LINK_PATTERN =
+            Pattern.compile("<a[^>]+href=\"([^\"]+)\"[^>]*>\\s*([^<]{2,})\\s*</a>");
+    /** 导航菜单标题排除模式（非影视搜索结果） */
+    private static final Pattern NAV_TITLE_EXCLUDE_PATTERN =
+            Pattern.compile("^(?i)(登录|注册|首页|关于我们|联系我们|客户端|客服|下载|帮助|更多|全部|"
+                    + "电影|电视剧|综艺|动漫|纪录片|搜索|热门|排行)$");
+    /** 链接扫描上限（防止大页面遍历过深） */
+    private static final int MAX_SCAN_LINKS = 50;
+    /** 结果条数上限 */
+    private static final int MAX_RESULT_COUNT = 10;
+    /** 最短有效标题长度（过滤导航短词） */
+    private static final int MIN_TITLE_LENGTH = 3;
+
     /**
-    * ikantvresource提供者。
+     * 创建 ikantv资源提供器 实例（无参构造，使用默认数据源）。
      */
-    public IKanTvResourceProvider() { super(); }
+    public IKanTvResourceProvider() {
+        super();
+    }
+
+    /**
+     * 创建 ikantv资源提供器 实例。
+     *
+     * @param vs 视频数据源，不能为 null
+     */
+    public IKanTvResourceProvider(VideoSource vs) {
+        super(vs);
+    }
+
     @Override
+    /**
+     * 搜索resource。
+     *
+     * @param videoSearch 视频搜索，keyword 不能为空，为 null/空时返回错误结果
+     * @return 搜索resource的结果；站点失效（非影视特征/403）时返回错误结果
+     */
     public ReturnPageResult<VideoInfoResult> searchResource(VideoSearch videoSearch) {
         String kw = videoSearch.getKeyword();
         if (!StringUtils.hasText(kw)) {
             return ReturnPageResult.error("关键词不能为空");
         }
         try {
-            HttpClient client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(10)).followRedirects(HttpClient.Redirect.NORMAL).build();
-            HttpRequest req = HttpRequest.newBuilder().uri(URI.create("https://www.ikantv.com/?s=" + java.net.URLEncoder.encode(kw, "UTF-8")))
-                    .timeout(Duration.ofSeconds(15)).header("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36").GET().build();
+            HttpClient client = HttpClient.newBuilder()
+                    .connectTimeout(Duration.ofSeconds(10))
+                    .followRedirects(HttpClient.Redirect.NORMAL).build();
+            String url = SEARCH_URL + URLEncoder.encode(kw, StandardCharsets.UTF_8);
+            HttpRequest req = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .timeout(Duration.ofSeconds(15))
+                    .header("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36")
+                    .GET().build();
             HttpResponse<String> resp = client.send(req, HttpResponse.BodyHandlers.ofString());
             // 死域检测：页面不含"影视"特征词说明站点已失效，快速失败
-            if (resp.statusCode() >= 400 || !resp.body().contains("影视")) {
-                return ReturnPageResult.error("ikantv 站点已失效 (http " + resp.statusCode() + ")");
+            if (resp.statusCode() >= 400 || !resp.body().contains(SITE_MARKER)) {
+                return ReturnPageResult.error("ikantv 站点已失效 (http "
+                        + resp.statusCode() + ")");
             }
 
-            List<VideoInfoResult> results = new ArrayList<>();
+            List<VideoInfoResult> results = new ArrayList<>(MAX_RESULT_COUNT);
             parseHtml(resp.body(), results);
-            return results.isEmpty() ? ReturnPageResult.empty() : ReturnPageResult.of(PageResult.<VideoInfoResult>builder().data(results).total(results.size()).build());
-        } catch (Exception e) { return ReturnPageResult.error("ikantv 搜索失败: " + e.getMessage()); }
+            if (results.isEmpty()) {
+                return ReturnPageResult.empty();
+            }
+            return ReturnPageResult.of(PageResult.<VideoInfoResult>builder()
+                    .data(results).total(results.size()).build());
+        } catch (Exception e) {
+            return ReturnPageResult.error("ikantv 搜索失败: " + e.getMessage());
+        }
     }
 
     /**
-     * 解析HTML
-     * @param html HTML
-     * @param results 结果
+     * 解析HTML。
+     * <p>提取影视条目链接，排除导航菜单项与短词，去重后写入 results。</p>
+     *
+     * @param html 响应 HTML 文本，不能为 null
+     * @param results 结果列表，方法内追加条目，不能为 null
      */
     private void parseHtml(String html, List<VideoInfoResult> results) {
-        java.util.regex.Pattern titlePat = java.util.regex.Pattern.compile("<a[^>]+href=\"([^\"]+)\"[^>]*>\\s*([^<]{2,})\\s*</a>");
-        java.util.regex.Pattern exclude = java.util.regex.Pattern.compile(
-                "^(?i)(登录|注册|首页|关于我们|联系我们|客户端|客服|下载|帮助|更多|全部|电影|电视剧|综艺|动漫|纪录片|搜索|热门|排行)$");
-        java.util.regex.Matcher m = titlePat.matcher(html);
-        java.util.Set<String> seen = new java.util.LinkedHashSet<>();
+        Set<String> seen = new LinkedHashSet<>(MAX_RESULT_COUNT);
+        Matcher m = TITLE_LINK_PATTERN.matcher(html);
         int idx = 0;
-        while (m.find() && idx++ < 50 && results.size() < 10) {
+        while (m.find() && idx++ < MAX_SCAN_LINKS && results.size() < MAX_RESULT_COUNT) {
             String link = m.group(1);
             String title = m.group(2).trim();
-            if (title.length() < 3 || exclude.matcher(title).find() || !seen.add(link)) {
+            // 短词与导航菜单标题过滤
+            if (title.length() < MIN_TITLE_LENGTH
+                    || NAV_TITLE_EXCLUDE_PATTERN.matcher(title).find()) {
+                continue;
+            }
+            // 去重
+            if (!seen.add(link)) {
                 continue;
             }
             VideoInfoResult v = new VideoInfoResult();
